<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".controller.ChangePassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"
        android:text="@string/chge_pass"
        android:textAlignment="center"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/font1"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp" />
</LinearLayout>