<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".controller.SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:fontFamily="@font/font1"
        android:text="@string/sign_in"
        android:textColor="#504F4F"
        android:textSize="50sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="380dp"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText

                android:id="@+id/email_mobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font1"
                android:hint="@string/enter_email_mobile_no"
                android:textColorHint="#504F4F"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/font1"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColorHint="#504F4F"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remember_me"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/forget_pass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forgot_password"
                    android:textAlignment="textEnd"
                    android:textColor="#000000" />

            </LinearLayout>

            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_bg"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>